# silex-lsp

./: Cargo.toml  README.md  build.ps1  build.sh  package-lock.json  xstd.md
src/: lib.rs  lsp.rs  main.rs  syntax.rs
