[package]
name = "silex-lsp"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0.217"
serde_json = "1.0.134"
tokio = { version = "1.42", features = ["io-std", "full"] }
tower-lsp = "0.20.0"
xelis-lexer = { git = "https://github.com/Tritonn204/xelis-vm", branch = "dev" }
xelis-ast = { git = "https://github.com/Tritonn204/xelis-vm", branch = "dev" }

[lib]
name = "silex_lsp"
path = "src/lib.rs"